--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,70 @@ body {
 }
 
 /* Add styles here! */
+body {
+  /* background-color: var(--light-grey-divider-color); */
+}
+:root {
+  --banner-color: #ffbf00;
+  --banner-shadow: #cc9900;
+  --text-highlight-color: #009966;
+  --grey-background-color: #666666;
+  --light-grey-divider-color: #999999;
+}
+header {
+  font-family: "Lato", sans-serif;
+  /* background-color: white; */
+  margin: auto;
+  width: 50%;
+  padding: 20px;
+}
+h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+div .max-width-wrapper {
+  /* width: 50%; */
+  margin: auto;
+  margin-top: 50px;
+}
+.intro-chunk {
+  /* background-color: rgb(229, 204, 179); */
+  /* width: max-content;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px; */
+  /* margin-left: 260px; */
+}
+.intro-chunk p {
+  max-width: 320px;
+  /* margin-bottom: 20px; */
+  line-height: 1.5;
+  /* margin-top: 20px; */
+}
+
+strong {
+  color: var(--text-highlight-color);
+}
+
+section .max-width-wrapper {
+}
+main {
+  background-color: var(--grey-background-color);
+}
+.card {
+  margin-top: 100px;
+  margin-bottom: 50px;
+  background-color: white;
+  width: 50%;
+  margin: auto;
+  padding: 20px;
+}
+
+.indented-heading {
+  margin-left: -40px;
+  width: fit-content;
+  background-color: var(--banner-color);
+  padding: 15px 30px;
+  box-shadow: 10px, var(--banner-shadow);
+  z-index: 5;
+}
