--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
   margin: auto;
   width: 50%;
   padding: 20px;
+  /* box-shadow: 0px 10px var(--light-grey-divider-color); */
 }
 h1 {
   font-size: 32px;
@@ -55,18 +56,22 @@ strong {
   color: var(--text-highlight-color);
 }
 
-section .max-width-wrapper {
+section {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 main {
   background-color: var(--grey-background-color);
 }
 .card {
-  margin-top: 100px;
-  margin-bottom: 50px;
+  /* margin-top: 50px; */
+  /* margin-bottom: 50px; */
   background-color: white;
   width: 50%;
+  min-width: 450px;
   margin: auto;
   padding: 20px;
+  padding-bottom: 50px;
 }
 
 .indented-heading {
@@ -74,6 +79,6 @@ main {
   width: fit-content;
   background-color: var(--banner-color);
   padding: 15px 30px;
-  box-shadow: 10px, var(--banner-shadow);
+  box-shadow: 0px 10px var(--banner-shadow);
   z-index: 5;
 }
